--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
     padding: 0;
     background-image: url(img/cover1.jpg);
     background-size: cover;
-    backdrop-filter: blur();
     backdrop-filter: blur(6px);
 }
 
@@ -31,6 +30,7 @@ body {
     border-radius: 30rem;
     width: 562rem;
     height: 562rem;
+    object-fit: cover;
 }
 
 .buttons {
@@ -39,7 +39,7 @@ body {
     justify-content: space-around;
     margin-top: 20rem;
     position: relative;
-    top: -200rem;
+    top: -220rem;
     backdrop-filter: blur(25px);
     width: 562rem;
     border-radius: 30rem;
@@ -61,11 +61,6 @@ flex-direction: column;
     text-shadow: 3px 1px 2px rgba(255, 255, 255, 0.5);
 }
 
-.artist {
-    font-size: 20rem;
-    text-shadow: 3px 1px 2px rgba(255, 255, 255, 0.5);
-}
-
 .pre-nex_button {
     display: flex;
     flex-direction: column;
@@ -82,8 +77,7 @@ flex-direction: column;
 }
 
 .play{
-    transform: rotate(270deg);
-    padding: 15rem;
+    transform: rotate(-90deg);
     width: 60rem;
 }
 
@@ -95,3 +89,24 @@ flex-direction: column;
 .img_button {
     width: 100%;
 }
+
+.play_and_progress {
+    display: flex;
+    padding: 10rem;
+
+}
+.progress_containeer {
+    background: #e4e4ed;
+    border-radius:  5rem;
+    width: 100%;
+    height: 10rem;
+    align-self: center;
+    margin-left: 14rem;
+}
+    .progress {
+        background: rgb(50, 40, 40);
+        border-radius:  5rem;
+        height: 100%;
+    }
+}
+
