--- a/style.css
+++ b/style.css
@@ -12,13 +12,12 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url(img/cover1.jpg);
+    background-image: url(img/bkr1.jpg);
     background-size: cover;
     backdrop-filter: blur(6px);
 }
 
 .player {
-    height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,6 +30,8 @@ body {
     width: 562rem;
     height: 562rem;
     object-fit: cover;
+    margin-top: 150rem;
+
 }
 
 .buttons {
@@ -59,6 +60,7 @@ flex-direction: column;
 .song {
     font-size: 30rem;
     text-shadow: 3px 1px 2px rgba(255, 255, 255, 0.5);
+    margin-top: 30rem;
 }
 
 .pre-nex_button {
@@ -102,11 +104,12 @@ flex-direction: column;
     height: 10rem;
     align-self: center;
     margin-left: 14rem;
+    cursor: pointer;
 }
     .progress {
         background: rgb(50, 40, 40);
         border-radius:  5rem;
         height: 100%;
     }
-}
+
 
